--- a/HedgeModManager/Languages/nl-NL.xaml
+++ b/HedgeModManager/Languages/nl-NL.xaml
@@ -77,8 +77,8 @@
     <system:String x:Key="MainUIMissingLoaderHeader" >De Mod Lader Is Not Niet Geinstaleerd</system:String>
     <system:String xml:space="preserve" x:Key="MainUIMissingLoaderDesc">Om Mods Voor {0} Te Kunnen Laden, Moet De Lader Geinstalleerd Zijn, Will Je De Lader Nu Installeren?</system:String>
     <system:String x:Key="MainUISelectModsDBTitle"   >Kies Van Waar Mods Worden Geladen...</system:String>
-
-    
+    <system:String x:Key="MainUIRuntimeMissingTitle">Een Runtime Ontbreekt!</system:String>
+    <system:String x:Key="MainUIRuntimeMissingMsg" xml:space="preserve">{0} vereist dat {1} is geïnstalleerd om mods&#x0a; correct te laten functioneren. Wilt u dat HMM deze runtime installeert?</system:String>
     <system:String x:Key="MainUISaveFileRedirectionDisabled" xml:space="preserve">Een of meer ingeschakelde mods vereisen omleiding van het opslagbestand om correct te werken. Wilt u deze functie inschakelen?&#x0a;Klik alleen op nee als u weet wat u doet.</system:String>
 
     <!-- OptionsWindow UI Strings -->
