--- a/HedgeModManager/UI/MainWindow.xaml
+++ b/HedgeModManager/UI/MainWindow.xaml
@@ -11,6 +11,7 @@
         MinHeight="600" MinWidth="560" Height="600" Width="560" WindowStartupLocation="CenterScreen" Style="{StaticResource HedgeWindow}">
     <Window.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+        <local:ModUpdateStatusConverter x:Key="ModUpdateStatusConverter"/>
         <ContextMenu x:Key="ModContextMenu">
             <MenuItem Header="{DynamicResource ModsUIModDescription}" Click="UI_Description_Click" InputGestureText="(Ctrl+D)"/>
             <MenuItem Header="{DynamicResource ModsUIModFavorite}" Click="UI_Favorite_Click" InputGestureText="(Alt+F)"/>
@@ -63,10 +64,10 @@
                                                 </DataTemplate>
                                             </GridViewColumn.CellTemplate>
                                         </GridViewColumn>
-                                        <GridViewColumn Header="{DynamicResource ModsUIVersion}"     Width="60" DisplayMemberBinding="{Binding Version}"/>
-                                        <GridViewColumn Header="{DynamicResource ModsUIAuthor}"      Width="89" DisplayMemberBinding="{Binding Author}"/>
+                                        <GridViewColumn Header="{DynamicResource ModsUIVersion}"     Width="60"  DisplayMemberBinding="{Binding Version}"/>
+                                        <GridViewColumn Header="{DynamicResource ModsUIAuthor}"      Width="89"  DisplayMemberBinding="{Binding Author}"/>
                                         <GridViewColumn Header="{DynamicResource ModsUISupportSave}" Width="105" DisplayMemberBinding="{Binding SupportsSave}"/>
-                                        <GridViewColumn Header="{DynamicResource ModsUIHasUpdate}"   Width="70" DisplayMemberBinding="{Binding HasUpdates}"/>
+                                        <GridViewColumn Header="{DynamicResource ModsUIHasUpdate}"   Width="70"  DisplayMemberBinding="{Binding UpdateServer, Converter={StaticResource ModUpdateStatusConverter}}"/>
                                     </GridView>
                                 </ListView.View>
                             </ListView>
