--- a/HedgeModManager/UI/ModConfigWindow.xaml
+++ b/HedgeModManager/UI/ModConfigWindow.xaml
@@ -7,6 +7,11 @@
         mc:Ignorable="d" MinHeight="450" MinWidth="800"
         Title="Configure Mod" Height="450" Width="800" Style="{StaticResource HedgeWindow}">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="0.35*"/>
+        </Grid.ColumnDefinitions>
+
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition Height="36"/>
@@ -15,7 +20,20 @@
         <ScrollViewer Margin="15">
             <Grid x:Name="ItemsHost" Margin="15,0"/>
         </ScrollViewer>
-        <StackPanel Orientation="Horizontal" FlowDirection="RightToLeft" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="-4" Grid.Row="1" Background="{StaticResource HMM.Window.DialogBottom}">
+
+        <Grid Grid.Row="0" Grid.Column="1">
+            <Border BorderThickness="1,0,0,0" BorderBrush="#FF3F3F46">
+                <DockPanel Margin="15,0,5,0">
+                    <TextBlock DockPanel.Dock="Top" Text="{DynamicResource ModsUIModDescription}"/>
+
+                    <TextBox x:Name="DescriptionBx" Foreground="#929292" IsReadOnly="True" Margin="0,10" TextWrapping="Wrap"
+                             HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto"/>
+                </DockPanel>
+            </Border>
+        </Grid>
+
+        <StackPanel Orientation="Horizontal" FlowDirection="RightToLeft" Grid.Column="0" Grid.ColumnSpan="2"
+                    HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="-4" Grid.Row="1" Background="{StaticResource HMM.Window.DialogBottom}">
             <Button Content="{StaticResource CommonUICancel}" Margin="8,0,0,0" VerticalAlignment="Center" Width="75" Height="23" Click="UI_Cancel_Click" IsCancel="True"/>
             <Button Content="{StaticResource CommonUIOK}" Margin="8,0,0,0" VerticalAlignment="Center" Width="75" Height="23" Click="UI_OK_Click" IsDefault="True"/>
         </StackPanel>
