--- a/HedgeModManager/UI/AboutWindow.xaml
+++ b/HedgeModManager/UI/AboutWindow.xaml
@@ -37,7 +37,7 @@
                     <Label Content="Korama"/>
                     <Label Content="Skyth"/>
                     <Label Content="PTKickass"/>
-                    <Label Content="Slash"/>
+                    <Label Content="M&M"/>
                     <Label Content="MainMemory"/>
                 </StackPanel>
                 <StackPanel Grid.Column="1">
