--- a/HedgeModManager/UI/AboutWindow.xaml
+++ b/HedgeModManager/UI/AboutWindow.xaml
@@ -46,7 +46,7 @@
                     <Label Content="Base Design"/>
                     <Label Content="CPKREDIR"/>
                     <Label Content="Contributing to Forces Mod Loader"/>
-                    <Label Content="Cheat codes"/>
+                    <Label Content="Contributing to the project"/>
                     <Label Content="Contributing to the project"/>
                     <Label Content="mod-loader-common"/>
                 </StackPanel>
