--- a/HedgeModManager/Languages/zh-CN.xaml
+++ b/HedgeModManager/Languages/zh-CN.xaml
@@ -26,7 +26,7 @@
     <system:String x:Key="MainUISave"          >保存</system:String>
     <system:String x:Key="MainUISaveAndPlay"   >保存并开始游戏</system:String>
     <system:String x:Key="MainUIPlay"          >开始游戏</system:String>
-    <system:String x:Key="MainUIMLDownloadFail"无法下载MOD加载器</system:String>
+    <system:String x:Key="MainUIMLDownloadFail">无法下载MOD加载器</system:String>
 
     <!-- Mods UI Strings -->
     <system:String x:Key="ModsUIName"           >名称</system:String>
