--- a/HedgeModManager/Themes/LightTheme.xaml
+++ b/HedgeModManager/Themes/LightTheme.xaml
@@ -17,8 +17,12 @@
     <SolidColorBrush x:Key="HMM.Button.ForegroundBrush" Color="#FF000000"/>
     <Color           x:Key="HMM.Button.HoverColor"   A="255" R="190" G="230" B="253"/>
     <Color           x:Key="HMM.Button.PressedColor" A="255" R="196" G="229" B="246"/>
+    <SolidColorBrush x:Key="HMM.Button.HoverBrush" Color="{DynamicResource HMM.Button.HoverColor}"/>
     <SolidColorBrush x:Key="HMM.Button.DisabledColor" Color="#FFBBBBBB"/>
     <SolidColorBrush x:Key="HMM.Button.DisabledTextColor" Color="#FF858585"/>
+    <SolidColorBrush x:Key="HMM.Menu.DisabledColor" Color="#FFBBBBBB"/>
+    <SolidColorBrush x:Key="HMM.Menu.HoverColor" Color="#FFEEEEEE"/>
+    <SolidColorBrush x:Key="HMM.Menu.DisabledTextColor" Color="#FF858585"/>
 
     <DropShadowEffect x:Key="HoverEffect" BlurRadius="5" Color="#FFF9D08E" Opacity="0" Direction="0" ShadowDepth="0"/>
 
